--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="chalk">
+<html lang="en" ng-app="pets">
   <head>
-    <title>Mychalk.tv</title>
+    <title>Petz.com</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
     <script src="app.js"></script>
-    <script src="js/ChalkController.js"></script>
+    <script src="js/PetController.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <div class="container" ng-controller="ChalkControl">
-      <h1>MYCHALK.TV</h1>
+    <div class="container" ng-controller="PetControl">
+      <h1>Petz.com</h1>
       <div class="row">
         <div class="col-xs-12">
-          <ul>
-            <form ng-submit="calculatePrice()" class="form-inline" role="form">
-              <input type="number" ng-model="desiredAmount" placeholder="HOW MUCH CHALK DO YOU NEED?!">
-              <button type="submit" class="btn btn-danger">CHALK!</button>
-            </form>
-          </ul>
+            <div class="form-group">
+              <form ng-submit="calculatePrice()" role="form">
+                <input type="number" class="form-control" ng-model="desiredAmount" placeholder="HOW MUCH PETS DO YOU NEED?!">
+
+                <select ng-model="myColor" ng-options="color.name for color in colors"></select>
+
+                <button type="submit" class="btn btn-danger">PETZ!</button>
+              </form>
+            </div>
         </div>
+      </div>
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12" ng-show="totalCost">
           <h2>Total Cost</h2>
-            {{totalCost}}
+            ${{totalCost}}.00 (shipping not included)<br>
+            {{myColor.name}}
         </div>
       </div>
     </div>
